Update and rename README.md to README.me

--- a/README.me
+++ b/README.me
@@ -266,7 +266,7 @@ Esse processo preserva melhor a informação visual da imagem original, já que 
 ## Módulo VGA
 
 <p>
-    O <code>vga_driver</code> é responsável por exibir o framebuffer digital da FPGA no padrão VGA analógico. Ele gera quadros de 640x480 pixels a 60 Hz usando clock de 25 MHz, convertendo os valores de 8 bits do framebuffer para sinais RGB via DAC externo da DE1-SoC.
+    O vga_driver é responsável por exibir o framebuffer digital da FPGA no padrão VGA analógico. Ele gera quadros de 640x480 pixels a 60 Hz usando clock de 25 MHz, convertendo os valores de 8 bits do framebuffer para sinais RGB via DAC externo da DE1-SoC.
 </p>
 
 <h3>Temporização e Sincronismo</h3>
